# erofs-utils

./: Makefile.am  README  configure.ac
fuse/: Makefile.am  dentry.c  dentry.h  disk_io.c  disk_io.h  getattr.c  getattr.h  init.c  init.h  logging.c  logging.h  main.c  namei.c  namei.h  open.c  open.h  read.c  read.h  readir.c  readir.h
include/: erofs_fs.h
include/erofs/: defs.h  hashtable.h  internal.h  xattr.h
lib/: Makefile.am  compress.c  compressor.c  compressor.h  compressor_xz.c  inode.c  xattr.c
tests/: 001  002  003  004  005  006  007  008  009  011  012  013  014  015  016  017  018  019  020  Makefile.am  common
